--- a/app/src/main/res/layout/widget_dynamic_favor.xml
+++ b/app/src/main/res/layout/widget_dynamic_favor.xml
@@ -66,10 +66,11 @@
                     android:id="@+id/dynamic_favor_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="2dp"
                     android:ellipsize="end"
                     android:lines="2"
                     android:textColor="@android:color/black"
-                    android:textSize="13sp" />
+                    android:textSize="12sp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -82,7 +83,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:textSize="11sp" />
+                        android:textSize="10sp" />
 
                     <TextView
                         android:layout_width="wrap_content"
