--- a/app/src/main/res/layout/item_dynamic.xml
+++ b/app/src/main/res/layout/item_dynamic.xml
@@ -4,82 +4,91 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?android:attr/selectableItemBackground"
-    android:paddingTop="2dp"
     android:clickable="true"
+    android:descendantFocusability="blocksDescendants"
     android:focusable="true"
-    android:descendantFocusability="blocksDescendants">
+    android:paddingTop="2dp">
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/item_dynamic_head"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
+    <RelativeLayout
+        android:id="@+id/item_dynamic_author_lay"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="18dp"
+        android:layout_marginEnd="18dp"
         android:layout_marginTop="1dp"
-        android:layout_marginEnd="4dp"
         android:layout_marginBottom="3dp"
         android:clickable="true"
-        android:focusable="true"
-        android:src="@drawable/img_default_head" />
+        android:focusable="true">
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/item_dynamic_off_1"
-        android:layout_width="15dp"
-        android:layout_height="15dp"
-        android:layout_alignBottom="@+id/item_dynamic_head"
-        android:layout_alignEnd="@+id/item_dynamic_head"
-        android:layout_marginEnd="-2dp"
-        android:src="@drawable/icon_ou_ver_1"/>
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/item_dynamic_head"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:layout_marginEnd="4dp"
+            android:src="@drawable/img_default_head" />
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/item_dynamic_off_2"
-        android:layout_width="15dp"
-        android:layout_height="15dp"
-        android:layout_alignBottom="@+id/item_dynamic_head"
-        android:layout_alignEnd="@+id/item_dynamic_head"
-        android:layout_marginEnd="-2dp"
-        android:src="@drawable/icon_ou_ver_2"/>
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/item_dynamic_off_1"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:layout_alignEnd="@+id/item_dynamic_head"
+            android:layout_alignBottom="@+id/item_dynamic_head"
+            android:layout_marginEnd="-2dp"
+            android:src="@drawable/icon_ou_ver_1" />
 
-    <TextView
-        android:id="@+id/item_dynamic_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="18dp"
-        android:layout_toEndOf="@+id/item_dynamic_head"
-        android:ellipsize="end"
-        android:maxLines="1"
-        android:textColor="@color/black"
-        android:textStyle="bold" />
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/item_dynamic_off_2"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:layout_alignEnd="@+id/item_dynamic_head"
+            android:layout_alignBottom="@+id/item_dynamic_head"
+            android:layout_marginEnd="-2dp"
+            android:src="@drawable/icon_ou_ver_2" />
 
-    <TextView
-        android:id="@+id/item_dynamic_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/item_dynamic_name"
-        android:layout_alignStart="@+id/item_dynamic_name"
-        android:layout_marginEnd="18dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="2dp"
-        android:textSize="10sp" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toEndOf="@+id/item_dynamic_head"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/item_dynamic_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:textColor="@color/black"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/item_dynamic_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="2dp"
+                android:textSize="10sp" />
+        </LinearLayout>
+    </RelativeLayout>
 
     <LinearLayout
         android:id="@+id/item_dynamic_dynamic"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/item_dynamic_head"
-        android:orientation="vertical"/>
+        android:layout_below="@+id/item_dynamic_author_lay"
+        android:orientation="vertical" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/item_dynamic_dynamic"
-        android:layout_marginTop="4dp"
-        android:layout_marginBottom="2dp"
         android:layout_marginStart="18dp"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="18dp"
-        android:orientation="horizontal"
-        android:baselineAligned="false">
+        android:layout_marginBottom="2dp"
+        android:baselineAligned="false"
+        android:orientation="horizontal">
 
         <LinearLayout
             android:id="@+id/item_dynamic_share_lay"
@@ -103,8 +112,8 @@
                 android:layout_height="20dp"
                 android:layout_margin="1dp"
                 android:gravity="center_vertical"
-                android:textSize="12sp"
-                android:textColor="@color/gray_77"/>
+                android:textColor="@color/gray_77"
+                android:textSize="12sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -128,8 +137,8 @@
                 android:layout_height="20dp"
                 android:layout_margin="1dp"
                 android:gravity="center_vertical"
-                android:textSize="12sp"
-                android:textColor="@color/gray_77" />
+                android:textColor="@color/gray_77"
+                android:textSize="12sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -154,8 +163,8 @@
                 android:layout_height="20dp"
                 android:layout_margin="1dp"
                 android:gravity="center_vertical"
-                android:textSize="12sp"
-                android:textColor="@color/gray_77" />
+                android:textColor="@color/gray_77"
+                android:textSize="12sp" />
         </LinearLayout>
     </LinearLayout>
 
