--- a/app/src/main/res/layout/widget_dynamic_video.xml
+++ b/app/src/main/res/layout/widget_dynamic_video.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-    
+
     <LinearLayout
         android:id="@+id/dynamic_video_author"
         android:layout_width="match_parent"
@@ -14,47 +14,47 @@
         android:clickable="true"
         android:focusable="true"
         android:gravity="center_vertical">
-        
+
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/dynamic_video_author_img"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:src="@drawable/img_default_head"/>
+            android:src="@drawable/img_default_head" />
 
         <TextView
             android:id="@+id/dynamic_video_author_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="2dp"
-            android:textSize="13sp"/>
-        
+            android:textSize="13sp" />
+
     </LinearLayout>
 
-    <TextView
+    <cn.luern0313.wristbilibili.widget.FolderTextView
         android:id="@+id/dynamic_video_dynamic"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="2dp"
+        android:layout_below="@id/dynamic_video_author"
         android:layout_marginStart="18dp"
         android:layout_marginEnd="18dp"
-        android:layout_below="@id/dynamic_video_author"
+        android:layout_marginBottom="2dp"
         android:textSize="13sp"
-        android:visibility="gone"/>
+        app:fold_line="6"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/dynamic_video_img_lay"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/dynamic_video_dynamic"
         android:layout_marginStart="18dp"
-        android:layout_marginEnd="18dp"
-        android:layout_below="@+id/dynamic_video_dynamic">
+        android:layout_marginEnd="18dp">
 
         <ImageView
             android:id="@+id/dynamic_video_img"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:src="@drawable/img_default_vid"
             android:scaleType="centerCrop"
+            android:src="@drawable/img_default_vid"
             app:layout_constraintDimensionRatio="68:40"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -65,13 +65,13 @@
         android:id="@+id/dynamic_video_desc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/dynamic_video_img_lay"
         android:layout_alignStart="@id/dynamic_video_img_lay"
+        android:layout_alignBottom="@id/dynamic_video_img_lay"
         android:layout_margin="4dp"
         android:background="@drawable/shape_bg_dynamic_video_desc"
         android:paddingStart="4dp"
-        android:paddingEnd="4dp"
         android:paddingTop="1dp"
+        android:paddingEnd="4dp"
         android:paddingBottom="1dp"
         android:textColor="@color/white"
         android:textSize="10sp" />
@@ -83,7 +83,7 @@
         android:layout_below="@+id/dynamic_video_img_lay"
         android:layout_marginStart="18dp"
         android:layout_marginEnd="18dp"
-        android:textSize="13sp"
-        android:textColor="@color/gray_22"/>
+        android:textColor="@color/gray_22"
+        android:textSize="13sp" />
 
 </RelativeLayout>
