--- a/app/src/main/res/layout/widget_dynamic_article.xml
+++ b/app/src/main/res/layout/widget_dynamic_article.xml
@@ -31,7 +31,7 @@
 
     </LinearLayout>
 
-    <cn.luern0313.wristbilibili.widget.FolderTextView
+    <cn.luern0313.wristbilibili.widget.ExpandableTextView
         android:id="@+id/dynamic_article_dynamic"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -40,7 +40,7 @@
         android:layout_marginEnd="19dp"
         android:layout_marginBottom="2dp"
         android:textSize="13sp"
-        app:fold_line="6" />
+        app:etv_MaxLinesOnShrink="6"/>
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
