--- a/app/src/main/res/layout/widget_dynamic_url.xml
+++ b/app/src/main/res/layout/widget_dynamic_url.xml
@@ -17,7 +17,7 @@
         android:textColor="@color/colorPrimary"
         android:textSize="13sp" />
 
-    <cn.luern0313.wristbilibili.widget.FolderTextView
+    <cn.luern0313.wristbilibili.widget.ExpandableTextView
         android:id="@+id/dynamic_url_dynamic"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -26,9 +26,10 @@
         android:layout_marginEnd="18dp"
         android:layout_marginBottom="2dp"
         android:textSize="13sp"
-        app:fold_line="6"/>
+        app:etv_MaxLinesOnShrink="6"/>
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/dynamic_url_url"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/dynamic_url_dynamic"
