--- a/app/src/main/res/layout/widget_dynamic_video.xml
+++ b/app/src/main/res/layout/widget_dynamic_video.xml
@@ -30,7 +30,7 @@
 
     </LinearLayout>
 
-    <cn.luern0313.wristbilibili.widget.FolderTextView
+    <cn.luern0313.wristbilibili.widget.ExpandableTextView
         android:id="@+id/dynamic_video_dynamic"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -39,7 +39,7 @@
         android:layout_marginEnd="18dp"
         android:layout_marginBottom="2dp"
         android:textSize="13sp"
-        app:fold_line="6"/>
+        app:etv_MaxLinesOnShrink="6"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/dynamic_video_img_lay"
