优化专栏中卡片显示

--- a/app/src/main/res/layout/fragment_user_detail.xml
+++ b/app/src/main/res/layout/fragment_user_detail.xml
@@ -39,7 +39,7 @@
 
         <TextView
             android:id="@+id/user_detail_name"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/user_detail_head"
             android:layout_alignParentStart="true"
@@ -48,7 +48,6 @@
             android:layout_toStartOf="@+id/user_detail_follow"
             android:ellipsize="end"
             android:maxLines="1"
-            android:textColor="@color/colorAccent"
             android:textStyle="bold" />
 
         <TextView
