--- a/app/src/main/res/layout/item_reply_reply.xml
+++ b/app/src/main/res/layout/item_reply_reply.xml
@@ -49,12 +49,12 @@
             android:background="@drawable/shape_bg_reply_up"
             android:ellipsize="end"
             android:maxLines="1"
-            android:paddingStart="3dp"
-            android:paddingEnd="3dp"
+            android:paddingStart="5dp"
+            android:paddingEnd="5dp"
             android:text="UP"
             android:textColor="@color/white"
             android:textSize="10dp"
-            android:visibility="gone" />
+            android:visibility="visible" />
 
     </LinearLayout>
 
@@ -99,11 +99,11 @@
         android:layout_below="@+id/item_reply_head"
         android:layout_marginLeft="2dp"
         android:layout_marginRight="2dp"
-        app:etv_MaxLinesOnShrink="6"/>
+        app:etv_MaxLinesOnShrink="6" />
 
     <LinearLayout
         android:id="@+id/item_reply_warning"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/item_reply_text"
         android:layout_marginLeft="2dp"
@@ -123,8 +123,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="3dp"
+            android:text="@string/reply_report_warning"
             android:textColor="@color/yellow"
-            android:textSize="11sp" />
+            android:textSize="10sp" />
 
     </LinearLayout>
 
@@ -196,17 +197,43 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/item_reply_up_like"
-        android:layout_marginLeft="4dp"
         android:layout_marginTop="4dp"
-        android:layout_marginRight="4dp"
+        android:layout_marginEnd="4dp"
         android:baselineAligned="false"
+        android:gravity="end"
         android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/item_reply_report"
+            android:layout_width="26dp"
+            android:layout_height="26dp"
+            android:padding="4dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:src="@drawable/icon_report" />
+
+        <ImageView
+            android:id="@+id/item_reply_reply"
+            android:layout_width="26dp"
+            android:layout_height="26dp"
+            android:padding="4dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:src="@drawable/icon_reply" />
+
+        <ImageView
+            android:id="@+id/item_reply_dislike"
+            android:layout_width="26dp"
+            android:layout_height="26dp"
+            android:padding="4dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:src="@drawable/icon_dislike" />
 
         <LinearLayout
             android:id="@+id/item_reply_like"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="1"
             android:clickable="true"
             android:focusable="true"
             android:gravity="center_vertical"
@@ -221,56 +248,6 @@
 
             <TextView
                 android:id="@+id/item_reply_like_n"
-                android:layout_width="wrap_content"
-                android:layout_height="20dp"
-                android:layout_margin="1dp"
-                android:gravity="center_vertical"
-                android:textSize="12sp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/item_reply_dislike"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:clickable="true"
-            android:focusable="true"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/item_reply_dislike_i"
-                android:layout_width="18dp"
-                android:layout_height="18dp"
-                android:layout_margin="4dp"
-                android:src="@drawable/icon_dislike" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="20dp"
-                android:layout_margin="1dp"
-                android:gravity="center_vertical"
-                android:textSize="12sp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/item_reply_reply"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:clickable="true"
-            android:focusable="true"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:layout_width="18dp"
-                android:layout_height="18dp"
-                android:layout_margin="4dp"
-                android:src="@drawable/icon_reply" />
-
-            <TextView
-                android:id="@+id/item_reply_reply_n"
                 android:layout_width="wrap_content"
                 android:layout_height="20dp"
                 android:layout_margin="1dp"
