--- a/app/src/main/res/layout/widget_dynamic_article.xml
+++ b/app/src/main/res/layout/widget_dynamic_article.xml
@@ -62,10 +62,9 @@
                 android:id="@+id/dynamic_article_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="2dp"
-                android:layout_marginRight="2dp"
-                android:paddingStart="4dp"
-                android:paddingEnd="4dp"
+                android:layout_marginStart="4dp"
+                android:layout_marginEnd="4dp"
+                android:padding="3dp"
                 android:textColor="@color/gray_22"
                 android:textSize="13sp" />
 
