--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -45,17 +45,17 @@
             android:paddingLeft="19dp"
             android:paddingRight="19dp">
 
-            <ImageView
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:layout_width="92dp"
                 android:layout_height="92dp"
                 android:layout_marginTop="6dp"
-                android:src="@drawable/bilibili" />
+                android:src="@mipmap/ic_launcher_new_round" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
-                android:text="腕上哔哩v2.6"
+                android:text="腕上哔哩v3.0"
                 android:textStyle="bold" />
 
             <TextView
