--- a/app/src/main/res/layout/activity_unsupported_link.xml
+++ b/app/src/main/res/layout/activity_unsupported_link.xml
@@ -92,7 +92,7 @@
 
         <org.sufficientlysecure.htmltextview.HtmlTextView
             android:id="@+id/ul_info"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:layout_marginEnd="24dp"
