--- a/app/src/main/res/values/ic_launcher_new_background.xml
+++ b/app/src/main/res/values/ic_launcher_new_background.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="ic_launcher_new_background">#C3C3C3</color>
+    <color name="ic_launcher_new_background">#D8D8D8</color>
 </resources>
