--- a/app/src/main/res/layout/activity_opensource.xml
+++ b/app/src/main/res/layout/activity_opensource.xml
@@ -46,7 +46,7 @@
             android:layout_marginRight="19dp"
             android:layout_marginTop="6dp"
             android:gravity="center_horizontal"
-            android:text="本应用在github开源，欢迎star~~\nhttps://github.com/luern0313/WristBilibili" />
+            android:text="@string/open_source_github" />
 
         <ImageView
             android:layout_width="128dp"
@@ -60,7 +60,7 @@
             android:layout_marginLeft="26dp"
             android:layout_marginRight="26dp"
             android:layout_marginTop="6dp"
-            android:text="--------------------------\n本应用使用了以下开源库，向这些开源库的作者致以敬意！\n--------------------------\nCircleImageView\nhdodenhof\nApache License 2.0\nhttps://github.com/hdodenhof/CircleImageView\n--------------------------\nExpandableTextView\nCarbs0126\nApache License 2.0\nhttps://github.com/Carbs0126/ExpandableTextView\n--------------------------\nWaveSwipeRefreshLayout\nrecruit-lifestyle\nApache License 2.0\nhttps://github.com/recruit-lifestyle/WaveSwipeRefreshLayout\n--------------------------\nsketch\npanpf\nApache License 2.0\nhttps://github.com/panpf/sketch\n--------------------------\nokhttp\nsquare\nApache License 2.0\nhttps://github.com/square/okhttp\n--------------------------\nFileDownloader\nlingochamp\nApache License 2.0\nhttps://github.com/lingochamp/FileDownloader\n--------------------------"
+            android:text="@string/open_source_other"
             android:textSize="12sp" />
 
     </LinearLayout>
