--- a/app/src/main/res/layout/item_list_video.xml
+++ b/app/src/main/res/layout/item_list_video.xml
@@ -4,6 +4,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:descendantFocusability="blocksDescendants"
+    android:background="?android:attr/selectableItemBackground"
     android:paddingBottom="1dp"
     android:paddingLeft="18dp"
     android:paddingRight="18dp"
