--- a/app/src/main/res/layout/widget_dy_senddynamic.xml
+++ b/app/src/main/res/layout/widget_dy_senddynamic.xml
@@ -1,15 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:background="@drawable/shape_bg_toolbar_orange"
+    android:gravity="center_vertical"
+    android:orientation="horizontal"
+    android:paddingStart="16dp"
+    android:paddingEnd="16dp">
 
-    <Button
+    <TextView
+        android:id="@+id/wid_dy_title"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:gravity="center_vertical"
+        android:padding="6dp"
+        android:text="全部动态"
+        android:textSize="15sp"
+        android:textStyle="bold" />
+
+    <TextView
         android:id="@+id/wid_dy_senddynamic"
-        style="@style/Widget.AppCompat.Button.Colored"
-        android:layout_width="120dp"
-        android:layout_height="36dp"
-        android:layout_centerHorizontal="true"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:clickable="true"
+        android:focusable="true"
+        android:gravity="center_vertical"
+        android:padding="6dp"
         android:text="发动态"
-        android:textColor="@color/white"
-        android:textSize="13sp" />
-</RelativeLayout>
+        android:textColor="@color/toolbar_text"
+        android:textSize="12sp" />
+
+</LinearLayout>
